tests/snapshots/tui_tests__tui_blocked_drone.snap
---
source: tests/tui_tests.rs
expression: output
---
                                                                                
 ┌────────────────────────────────────────────────────────────────────────────┐ 
 │Drone: blocked-drone [BLOCKED]                                              │ 
 └────────────────────────────────────────────────────────────────────────────┘ 
 ┌Details─────────────────────────────────────────────────────────────────────┐ 
 │Blocked Reason: Missing API key                                             │ 
 │                                                                            │ 
 │Progress: 1/3                                                               │ 
 └────────────────────────────────────────────────────────────────────────────┘
