tests/snapshots/tui_tests__tui_conversation_view.snap
---
source: tests/tui_tests.rs
expression: output
---
                                                                                
                                                                                
  ┌──────────────────────────────────────────────────────────────────────────┐  
  │Session: 2024-01-01 10:00:00                                              │  
  └──────────────────────────────────────────────────────────────────────────┘  
  ┌Conversation──────────────────────────────────────────────────────────────┐  
  │[USER] Can you help me implement a feature?                               │  
  │[ASSISTANT] Of course! I'd be happy to help.                              │  
  │[TOOL: Read] Reading file: src/main.rs                                    │  
  │[TOOL RESULT] File content...                                             │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  └──────────────────────────────────────────────────────────────────────────┘  
  ┌──────────────────────────────────────────────────────────────────────────┐  
  │Press 'q' to go back, '/' to search, 'j/k' to scroll                      │  
  └──────────────────────────────────────────────────────────────────────────┘
