tests/snapshots/tui_tests__tui_drone_detail_view.snap
---
source: tests/tui_tests.rs
assertion_line: 364
expression: output
---
                                                                                
                                                                                
  ┌──────────────────────────────────────────────────────────────────────────┐  
  │Drone: test-drone                                                         │  
  └──────────────────────────────────────────────────────────────────────────┘  
  ┌Status────────────────────────────────────────────────────────────────────┐  
  │Status: in_progress                                                       │  
  │Progress: 2/5 (40%)                                                       │  
  │Branch: hive/test-drone                                                   │  
  └──────────────────────────────────────────────────────────────────────────┘  
  ┌Current───────────────────────────────────────────────────────────────────┐  
  │Working on: TASK-3                                                        │  
  └──────────────────────────────────────────────────────────────────────────┘  
  ┌Completed Tasks───────────────────────────────────────────────────────────┐  
  │✓ TASK-1                                                                  │  
  │✓ TASK-2                                                                  │  
  │                                                                          │  
  │                                                                          │  
  └──────────────────────────────────────────────────────────────────────────┘  
  ┌──────────────────────────────────────────────────────────────────────────┐  
  │Press 'q' to quit, 'j/k' to navigate                                      │  
  └──────────────────────────────────────────────────────────────────────────┘
