tests/snapshots/tui_tests__tui_progress_bar_0.snap
---
source: tests/tui_tests.rs
expression: output
---
┌────────────────────────────────────────────────┐
│[░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░] 0%   │
└────────────────────────────────────────────────┘
