tests/snapshots/tui_tests__tui_progress_bar_75.snap
---
source: tests/tui_tests.rs
expression: output
---
┌────────────────────────────────────────────────┐
│[██████████████████████████████░░░░░░░░░░] 75%  │
└────────────────────────────────────────────────┘
