tests/snapshots/tui_tests__tui_search_mode.snap
---
source: tests/tui_tests.rs
expression: output
---
                                                                                
 ┌Session─────────────────────────────────────────────────────────────────────┐ 
 │Content with searchable text...                                             │ 
 │                                                                            │ 
 │                                                                            │ 
 └────────────────────────────────────────────────────────────────────────────┘ 
 ┌Search (2 results)──────────────────────────────────────────────────────────┐ 
 │Search: API                                                                 │ 
 └────────────────────────────────────────────────────────────────────────────┘
