tests/snapshots/tui_tests__tui_session_list.snap
---
source: tests/tui_tests.rs
expression: output
---
                                                                                
                                                                                
  ┌──────────────────────────────────────────────────────────────────────────┐  
  │Claude Sessions - test-drone                                              │  
  └──────────────────────────────────────────────────────────────────────────┘  
  ┌Sessions──────────────────────────────────────────────────────────────────┐  
  │2024-01-01 10:00:00 - Session 1 (45 messages)                             │  
  │2024-01-01 11:30:00 - Session 2 (32 messages)                             │  
  │2024-01-01 14:15:00 - Session 3 (18 messages)                             │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  └──────────────────────────────────────────────────────────────────────────┘  
  ┌──────────────────────────────────────────────────────────────────────────┐  
  │Press 'Enter' to view session, 'q' to quit, 'j/k' to navigate             │  
  └──────────────────────────────────────────────────────────────────────────┘
