tests/snapshots/tui_tests__tui_status_dashboard_multiple_drones.snap
---
source: tests/tui_tests.rs
expression: output
---
                                                                                
                                                                                
  ┌──────────────────────────────────────────────────────────────────────────┐  
  │Hive Status Dashboard                                                     │  
  └──────────────────────────────────────────────────────────────────────────┘  
  ┌Drones────────────────────────────────────────────────────────────────────┐  
  │frontend             in_progress        1/3 ( 33%)                        │  
  │backend              completed          3/3 (100%)                        │  
  │database             error              1/5 ( 20%)                        │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  └──────────────────────────────────────────────────────────────────────────┘  
  ┌──────────────────────────────────────────────────────────────────────────┐  
  │Press 'q' to quit                                                         │  
  └──────────────────────────────────────────────────────────────────────────┘
