tests/snapshots/tui_tests__tui_status_dashboard_single_drone.snap
---
source: tests/tui_tests.rs
expression: output
---
                                                                                
                                                                                
  ┌──────────────────────────────────────────────────────────────────────────┐  
  │Hive Status Dashboard                                                     │  
  └──────────────────────────────────────────────────────────────────────────┘  
  ┌Drones────────────────────────────────────────────────────────────────────┐  
  │test-drone           in_progress        2/5 ( 40%)                        │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  └──────────────────────────────────────────────────────────────────────────┘  
  ┌──────────────────────────────────────────────────────────────────────────┐  
  │Press 'q' to quit                                                         │  
  └──────────────────────────────────────────────────────────────────────────┘
